@@ -1,3 +1,8 @@
+2012-03-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/52760
+	* gcc.c-torture/execute/pr52760.c: New test.
+
 2012-03-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52743
